--- a/ESTILO/ESILOCUADRICULA.CSS
+++ b/ESTILO/ESILOCUADRICULA.CSS
@@ -41,7 +41,7 @@ position: absolute;
 bottom: 0;
 left: 0;
 width: 100%;
-background-color: blue;
+background-color:black;
 text-align: center;
 opacity: 0;
 transform: translateY(100%);
