--- a/ESTILO/ESTILO3.CSS
+++ b/ESTILO/ESTILO3.CSS
@@ -2,7 +2,7 @@
 {
   width: 100%;
   height: auto;
-  background-color: black;
+  background-color:black;
   padding: 5px 5px;
   margin: 5px 5px;
   display: flex;
@@ -12,7 +12,7 @@
    
     width: 100%;
     height: auto;
-    background-color:beige;
+    background-color:white;
     padding: 8px;
      display: block;
     text-align: justify;
